# prpn

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  bootstrap  config.h.in  configure  configure.ac  configure.scan  edit.sh  extracfg.h  gen-win-makefiles.cmd  makefile.bcc  makefile.gcc  makefile.vc  pRPN.bkl  prpn.bkl  prpn.desktop  prpn.spec
debian/: README.Debian  README.source  changelog  control  copyright  prpn.doc-base  prpn.manpages  rules
doc/: Makefile.am  Makefile.in  cmds.txt  cmdsen.txt  cmdsfr.txt  hlp_en.txt  hlp_fr.txt  make-man-page.sh  pRPN.1  pRPN.fr.1  pRPN.html  pRPN.txt  pRPN1-postfix  pRPN1-prefix  pRPN1en-postfix  pRPN1en-prefix  pRPN1fr-postfix  pRPN1fr-prefix  pRPNen.html  pRPNen.txt  pRPNfr.html  pRPNfr.txt  prpn.1  prpn.fr.1  prpn1en-postfix  prpn1en-prefix  prpn1fr-postfix  prpn1fr-prefix  prpnen.html  prpnen.txt  prpnfr.html  prpnfr.txt
doc/man/: pRPN.1
doc/man/fr/: pRPN.1
images/: 4321.xcf  angle.xcf  app-bigicon-v2.xcf  app-icon-v2.xcf  bin.xcf  enter.xcf  exec.xcf  gray-btn.xcf  hp28s.xcf  hp28s2.xcf  hp28s3.xcf  red-btn.xcf  shift.xcf  tmp.xcf  tmp2.xcf  white-btn.xcf  white-large.xcf
nodist/: 1pRPN-vi  2pRPN-vi  c.xcf  clean.sh  copyright  debian-prpn.doc-base  dpiaware  ok-manifest  old-Makefile  win1-vi  win2-vi
nodist/obsolete/: rebake.sh  winbake.cmd
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  fr.gmo  fr.po  prpn.pot
src/: Commands.h  Common.h  Compat.cpp  Main.cpp  Makefile.am  Makefile.in  MyIntl.h  MyString.cpp  MyString.h  PGetOpt.cpp  PGetOpt.h  Parser.cpp  Parser.h  Scalar.cpp  Scalar.h  Stack.cpp  Stack.h  Ui.cpp  Ui.h  UiImplConsole.cpp  UiImplWx.cpp  Variable.cpp  Variable.h  Wxskin.cpp  Wxskin.h  dev.bkl  exec_norun.xpm  exec_run.xpm  makefile.bcc  makefile.gcc  makefile.vc  prpn.rc  prpn.xpm  shiftsel.xpm  shiftuns.xpm  unit_bin.xpm  unit_dec.xpm  unit_hex.xpm  unit_oct.xpm  winextra.txt
src/Wx/: SkBase.cpp  SkBase.h  SkHp28s.cpp  SkHp28s2.cpp  SkHp28s3.cpp  SkHp28sb.cpp  UiImplWx.cpp  hp28sbg.cpp  hp28sbg2.cpp  hp28sbg3.cpp
src/Wx/xpm/: angle_deg_s1.xpm  angle_rad.xpm  enter-unsel.xpm  exec_norun_s1.xpm  exec_run_s1.xpm  gray-small-sel.xpm  prpn.xpm  red-small-unsel.xpm  shiftsel_s1.xpm  unit_dec_s1.xpm  unit_hex_s1.xpm  unit_oct.xpm  white-div-sel.xpm  white-large-sel.xpm  white-small-sel.xpm
src/Wxskins/: SkinBase.cpp  hp28s.cpp
src/platform/: os_generic.cpp  os_generic.h  os_unix.h  os_unknown.h  os_win.h
src/png/: hp28s.h  hp28s_unix.h  hp28s_win.h
src/xpm/: angle_deg.xpm  angle_rad_s1.xpm  enter-sel.xpm  gray-small-unsel.xpm  red-small-sel.xpm  shiftuns_s1.xpm  unit_bin_s1.xpm  unit_oct_s1.xpm  white-div-unsel.xpm  white-large-unsel.xpm  white-small-unsel.xpm
test_linux/: README  arith-test.txt  bounds-test.txt  clean-tmp-files.sh  generic_multiple.sh  generic_simple.sh  test-bounds.sh  tt.sh
test_linux/big/: test-big-input.txt  test-big.sh
test_linux/perf/: input1.txt  input1ul0.txt  input2.txt  input2ul0.txt  input3.txt  input3ul0.txt  input4.txt  input4ul0.txt  pi.sh  pi.txt  picalc.txt  pigen-orig.txt  t.sh  t1.sh  t2.sh  t3.sh  t4.sh
test_linux/t01/: 1-input1.txt  2-expected-output1.txt  2-input1.txt  expected-output1.txt  test.sh
test_linux/t02/: expected-output.txt  expected-output1.txt  input.txt  test.sh
test_linux/t03/: expected-output1.txt  expected-output11.txt  expected-output12.txt  expected-output3.txt  expected-output4.txt  expected-output7.txt  input1.txt  input10.txt  input11.txt  input12.txt  input3.txt  input6.txt  input9.txt  test.sh
test_linux/t04/: expected-output10.txt  expected-output2.txt  expected-output5.txt  input2.txt  input5.txt  input7.txt  input8.txt
test_linux/t10/: expected-output.txt  input.txt  test.sh
test_linux/t11/: expected-output.txt  input.txt  test.sh
test_linux/t12/: expected-output.txt  input.txt  test.sh
test_linux/t13/: expected-output.txt  input.txt  test.sh
test_linux/t14/: expected-output1.txt  expected-output2.txt  expected-output3.txt  expected-output4.txt  expected-output5.txt  expected-output6.txt  expected-output7.txt  expected-output8.txt  input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  test.sh
test_linux/t15/: expected-output1.txt  expected-output10.txt  expected-output2.txt  expected-output3.txt  expected-output4.txt  expected-output5.txt  expected-output6.txt  expected-output7.txt  expected-output8.txt  expected-output9.txt  input1.txt  input10.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  input9.txt  test.sh
test_linux/t16/: expected-output1.txt  expected-output2.txt  expected-output3.txt  expected-output4.txt  expected-output5.txt  expected-output6.txt  expected-output7.txt  input1.txt  input2.txt  test.sh
test_linux/t17/: expected-output1.txt  expected-output2.txt  expected-output3.txt  expected-output4.txt  expected-output5.txt  expected-output6.txt  expected-output7.txt  input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  test.sh
test_linux/t18/: expected-output1.txt  expected-output10.txt  expected-output11.txt  expected-output12.txt  expected-output2.txt  expected-output3.txt  expected-output4.txt  expected-output5.txt  expected-output6.txt  expected-output7.txt  expected-output8.txt  expected-output9.txt  input1.txt  input10.txt  input11.txt  input12.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  input9.txt  test.sh
test_linux/t20/: 1-expected-output.txt  1-input.txt  2-input.txt  test.sh
test_linux/t21/: expected-output1.txt  expected-output2.txt  expected-output3.txt  expected-output4.txt  input1.txt  input2.txt  input3.txt  input4.txt  test.sh
test_linux/t25/: expected-output1.txt  expected-output10.txt  expected-output11.txt  expected-output12.txt  expected-output2.txt  expected-output3.txt  expected-output4.txt  expected-output5.txt  expected-output6.txt  expected-output7.txt  expected-output8.txt  (+14 more)
wininst/: README.txt  clean.cmd  prep.cmd  prep.sh  prpn.nsi  step1-prep.sh  step2-comp.sh
(+155 files in other folders)
